--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -67,8 +67,6 @@
     <string name="car_auto_tran_text">เกียร์อัตโนมัติ</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">เกียร์ธรรมดา</string>
-    <!-- Sign in Text-->
-    <string name="cars_sign_in_text">เข้าสู่ระบบด้วยเอ็กซ์พีเดีย</string>
 
     <!-- car result -->
     <!-- car door range -->
@@ -159,6 +157,8 @@
     <string name="car_rental_breakdown_drop_off_charges">ค่าธรรมเนียมส่งคืนรถที่จุดอื่น</string>
     <!-- Unlimited mileage -->
     <string name="unlimited_mileage">ไม่จำกัดไมล์</string>
+    <!-- Insurance included -->
+    <string name="insurance_included">รวมประกันภัย</string>
     <!-- Checkout confirmation message (temporary) -->
     <string name="successful_checkout_TEMPLATE">หมายเลขแผนการเดินทาง %1$s</string>
     <!-- Error message for some missing checkout params -->
@@ -879,8 +879,8 @@
     <string name="sign_in_failed_try_again">ไม่สามารถเข้าสู่ระบบ หากอีเมลและรหัสผ่านของคุณถูกต้อง โปรดตรวจสอบให้แน่ใจว่าการตั้งค่าประเทศในแอพของคุณถูกต้อง</string>
     <!-- User needs to reset password -->
     <string name="sign_in_reset_password">เราต้องการให้คุณสร้างบัญชีใหม่เพื่อใช้เข้าสู่ระบบเว็บไซต์เอ็กซ์พีเดียทั่วโลก&lt;br&gt;โปรดตั้งรหัสผ่านใหม่โดยใช้ลิงก์ \&apos;ลืมรหัสผ่าน\&apos; ด้านล่าง</string>
-    <!-- Facebook connect expedia password hint -->
-    <string name="expedia_password_hint">รหัสผ่านเอ็กซ์พีเดีย</string>
+    <!-- Facebook connect password hint -->
+    <string name="brand_password_hint_TEMPLATE">รหัสผ่าน {brand}</string>
     <!-- Link accounts -->
     <string name="link_accounts">เชื่อมต่อบัญชี</string>
     <!-- Failure to update the user -->
@@ -897,6 +897,8 @@
     <string name="Sign_In">เข้าสู่ระบบ</string>
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_Expedia">เข้าสู่ระบบด้วยเอ็กซ์พีเดีย</string>
+    <!-- Sign in with the current brand -->
+    <string name="sign_in_with_brand_TEMPLATE">เข้าสู่ระบบด้วย {brand}</string>
     <!-- or -->
     <string name="or">หรือ</string>
     <!-- Already signed in -->
@@ -1827,16 +1829,14 @@
     <string name="the_hotel_lowered_the_total_price_TEMPLATE">เรามีข่าวดี! ราคาห้องพักของคุณเพิ่งลดลงจาก %1$s เป็น %2$s</string>
     <!-- Button showing for when the user can click it to close the cost breakdown dialog -->
     <string name="done">เสร็จ</string>
-    <!-- Label to show user in cost breakdown for the total being charged to them right now -->
-    <string name="total_due_today">ยอดที่ต้องจ่ายเอ็กซ์พีเดียวันนี้</string>
     <!-- Label to show user when they use unsupported characters in their name or address -->
     <string name="please_use_the_roman_alphabet">โปรดใช้ตัวอักษรภาษาอังกฤษ</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">โปรดป้อนอีเมลที่ถูกต้อง</string>
     <!-- Row header for when we show resort fees as its own line item -->
     <string name="fees_paid_at_hotel">ค่าธรรมเนียมที่จ่ายที่โรงแรม:</string>
-    <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
-    <string name="total_due_to_expedia_today">ยอดที่ต้องจ่ายเอ็กซ์พีเดียวันนี้:</string>
+    <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
+    <string name="due_to_brand_today_TEMPLATE">ยอดที่ต้องจ่าย {brand} วันนี้:</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">ค่าธรรมเนียมรีสอร์ทจำนวน &lt;b&gt;%1$s&lt;/b&gt; จะถูกเรียกเก็บที่โรงแรม ราคารวมสำหรับการเข้าพักของคุณจะเป็น &lt;b&gt;%2$s&lt;/b&gt;</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -2361,6 +2361,10 @@
     <string name="DONE">เสร็จ</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">ค้นหาแผนที่</string>
+    <!-- Button label for toggling to the map -->
+    <string name="map_text">แผนที่</string>
+    <!-- Button label for toggling to the hotel list -->
+    <string name="list_text">รายการ</string>
     <!-- Label for sort hotels in hotel list -->
     <string name="sort">เรียงตาม</string>
     <!-- Label to swtich between map and list search results -->
@@ -2737,20 +2741,6 @@
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
     <string name="unknown">ไม่ทราบ</string>
 
-    <!-- Expedia policy strings -->
-    <!-- Policy displayed to user when an immediate charge is required -->
-    <string name="PolicyImmediateChargeRequired">ระบบจะทำการตัดเงินผ่านบัตรเครดิตเป็นจำนวนเงินทั้งหมดที่ระบุไว้ในใบยืนยันการจองทันที</string>
-    <!-- Policy displayed to user when the room is non-refundable -->
-    <string name="PolicyNonRefundable">เรามีราคาถูกสุดพิเศษสำหรับโรงแรมนี้ แต่ราคานี้เป็นราคาที่ไม่สามารถขอคืนเงินได้ คุณจะไม่ได้เงินคืน หากคุณต้องการยกเลิก</string>
-    <!-- Policy displayed to user when a deposit is required -->
-    <string name="PolicyDepositRequired">ระบบจะตัดเงินมัดจำจากบัตรเครดิตของคุณสำหรับการจองนี้ โรงแรมจะตัดบัตรเครดิตคุณทันที เมื่อคุณทำการจอง</string>
-    <!-- Policy displayed to user when a guarantee is required -->
-    <string name="PolicyGuaranteeRequired">เราจำเป็นต้องใช้ข้อมูลบัตรเครดิตของคุณในการยืนยันการจอง ระบบจะไม่ทำการตัดบัตรเครดิตของคุณ จนกว่าคุณจะเช็คอินเข้าพักหรือเกินกำหนดวันยกเลิกแล้ว</string>
-    <!-- Expedia merchant hotel policies -->
-    <string name="PolicyExpediaMerchant">ในการทำการจองนี้ คุณยอมรับข้อตกลงและเงื่อนไข ซึ่งรวมถึงนโยบายการยกเลิกและเนื้อหาข้อตกลงและเงื่อนไขต่างๆ ที่ระบุในข้อตกลงสำหรับผู้ใช้\n\nคุณตกลงที่จะชำระเงินสำหรับการจองนี้ หากคุณไม่ชำระเงินตามที่ตกลงไว้ และหากมีการเรียกเก็บหนี้สินจากบริษัทติดตามทวงหนี้ ทนายความ หรือมีการดำเนินการตามกฎหมายต่างๆ คุณตกลงที่จะชำระค่าใช้จ่ายและค่าธรรมเนียมต่างๆ ที่เกี่ยวข้อง ซึ่งรวมถึงค่าบริการทนายความและค่าศาล</string>
-    <!-- Expedia agent hotel policies -->
-    <string name="PolicyExpediaAgent">คุณกำลังจองโรงแรมที่ไม่มีส่วนลด ราคาที่แสดงเป็นราคาต่อคืน สำหรับผู้เข้าพัก 2 คนต่อห้อง ยกเว้นระบุว่าไว้อย่างอื่น โปรดอ่านรายละเอียดห้องพักและราคาอย่างละเอียด เพื่อให้แน่ใจว่าห้องที่คุณเลือกสามารถรองรับผู้เดินทางทั้งหมด ราคาห้องบางอย่างอาจต้องใช้โค้ดการจองพิเศษ ทางเราไม่ได้รวมค่าธรรมเนียมในการจอง ภาษี และค่าบริการต่างๆ ที่เรียกเก็บจากโรงแรม โรงแรมอาจมีเรียกเก็บค่าบริการสำหรับผู้เข้าพักเสริมนอกเหนือจากจำนวนที่ระบุไว้ ไม่ว่าจะเป็นผู้ใหญ่หรือเด็ก\n\nเราจะส่งคำขอสำหรับการเข้าพักมากกว่า 2 คน หรือการเข้าพักเกินจำนวนผู้เข้าพักที่กำหนดไว้สำหรับห้องของคุณไปให้โรงแรม แต่เราไม่สามารถรับประกันคำขอได้ หากโรงแรมยินดีรับคำขอของคุณ ทางโรงแรมอาจจะคิดค่าธรรมเนียมเพิ่มเติม</string>
-
     <!-- Expedia Accounts -->
     <!-- Label for menu item to sign into account -->
     <string name="sign_in">เข้าสู่ระบบ</string>
@@ -2763,7 +2753,7 @@
     <!-- Message that tells user they failed to sign in -->
     <string name="sign_in_failed">โปรดเข้าสู่ระบบอีกครั้ง</string>
     <!-- Label for sign out confirmation -->
-    <string name="sign_out_confirmation">คุณต้องการออกจากบัญชีเอ็กซ์พีเดียหรือไม่</string>
+    <string name="sign_out_confirmation_TEMPLATE">คุณแน่ใจว่าต้องการออกจากบัญชี {brand}?</string>
     <!-- Label for Expedia +blue rewards program name -->
     <string name="Expedia_plus_blue">Expedia +blue</string>
     <!-- Label for Expedia +silver rewards program name -->
@@ -2772,8 +2762,8 @@
     <string name="Expedia_plus_gold">Expedia +gold</string>
     <!-- Label for signin screen -->
     <string name="expedia_account">บัญชีเอ็กซ์พีเดีย</string>
-    <!-- Label for loading user profile from expedia.com -->
-    <string name="loading_expedia_account">กำลังโหลดบัญชีเอ็กซ์พีเดีย</string>
+    <!-- Label for loading user profile from Expedia -->
+    <string name="loading_brand_account_TEMPLATE">กำลังโหลดบัญชี {brand}</string>
     <!-- Label for password recovery -->
     <string name="forgot_your_password">ลืมรหัสผ่าน</string>
     <!-- Webview title for password recovery -->
@@ -2834,6 +2824,8 @@
     <string name="coupon_error_exceeded_earn_limit">ขออภัย มีการใช้คูปองนี้หลายครั้งเกินไป และไม่สามารถใช้ได้อีกต่อไป</string>
     <!-- Error when applying coupon - Invalid Average Price -->
     <string name="coupon_error_invalid_average_price">ขออภัย ราคาเฉลี่ยต่อคืนไม่ถึงมูลค่าขั้นต่ำสำหรับใช้คูปองนี้</string>
+    <!-- Error when applying coupon - Pay Later Hotel -->
+    <string name="coupon_error_pay_later_hotel">คูปองใช้กับห้องพักแบบจ่ายทีหลังไม่ได้ โปรดเลือกห้องพักแบบจ่ายตอนนี้</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2846,18 +2838,12 @@
     <string name="contact_expedia_via">ติดต่อเอ็กซ์พีเดียผ่าน</string>
     <!-- Contact Expedia via phone -->
     <string name="contact_expedia_phone">โทรศัพท์</string>
-    <!-- Contact Expedia via email subject -->
-    <string name="contact_expedia_email_subject">ฝ่ายบริการลูกค้าเอ็กซ์พีเดีย</string>
     <!-- Contact Expedia via website -->
     <string name="contact_expedia_website">เว็บไซต์</string>
     <!-- Label for "Expedia website" button in info page -->
     <string name="expedia_website">เว็บไซต์เอ็กซ์พีเดีย</string>
     <!-- Label for "app support" button in info page -->
     <string name="app_support">ฝ่ายสนับสนุนแอพ</string>
-    <!-- Subject line for "tell a friend" feature -->
-    <string name="tell_a_friend_subject">โรงแรมเอ็กซ์พีเดีย</string>
-    <!-- Message body for "tell a friend" feature -->
-    <string name="tell_a_friend_body">สวัสดี \n\n คุณลองดาวน์โหลดแอพ Expedia Hotels สำหรับ iPhone และ Android แล้วหรือยัง แอพฟรีนี้ช่วยให้คุณค้นหาและจองห้องโรงแรมกว่า 140,000 โรงแรมทั่วโลกได้ง่ายๆ ผ่านมือถือของคุณ\n\nhttp://www.expedia.com/app</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">ข้อตกลงและเงื่อนไข</string>
     <!-- Label for link to privacy policy -->
@@ -2872,8 +2858,6 @@
     <string name="dialog_title_cleared_private_data">ล้างข้อมูลส่วนตัวแล้ว</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">ล้างข้อมูลบัตรเครดิตและข้อมูลติดต่อทั้งหมดที่บันทึกไว้แล้ว</string>
-    <!-- Dialog Message asking the user to confirm that they want to open the expedia mobile site in an external browser -->
-    <string name="dialog_message_launch_expedia_mobile_site">เปิดใช้เว็บไซต์สำหรับมือถือของเอ็กซ์พีเดียหรือไม่</string>
     <!-- Action button label to Subscribe to our mailing list -->
     <string name="Subscribe">สมัครรับข่าวสาร</string>
     <!-- Action button label to follow on twitter -->
@@ -3272,8 +3256,6 @@
     <string name="country_ax">หมู่เกาะโอลันด์</string>
 
     <!-- Google Wallet -->
-    <!-- The merchant name to display to the user for Google Wallet -->
-    <string name="merchant_name">Expedia, Inc.</string>
     <!-- Loading message -->
     <string name="loading">กำลังโหลด</string>
     <!-- Google Wallet label -->
@@ -3323,9 +3305,9 @@
 
     <!-- Handling sold out hotels -->
     <!-- Shown when a hotel is sold out for tonight (and they are just booking for tonight) -->
-    <string name="not_currently_available">ขณะนี้ขายหมดแล้วบนเอ็กซ์พีเดีย</string>
+    <string name="not_currently_available_from_brand_TEMPLATE">ไม่มีให้บริการในขณะนี้บน {brand}</string>
     <!-- Shown when a hotel is sold out for a generic set of dates.  %s is the set of dates, e.g. "Not available from Expedia Nov. 3-4" -->
-    <string name="not_currently_available_TEMPLATE">ขายหมดแล้วบนเอ็กซ์พีเดีย %s</string>
+    <string name="not_currently_available_from_brand_dates_TEMPLATE">ไม่มีให้บริการบน {brand} {dates}</string>
 
     <!-- Push Notification Loc Strings - So these are named according to their loc keys that are provided from the push api -->
     <!-- Your flight to _ delayed _ hour TEMPLATE -->
@@ -3489,8 +3471,6 @@
     <!-- Checkout screen -->
     <!-- Content description for action: Press to begin checkout -->
     <string name="cd_checkout">กดเพื่อเริ่มทำการจอง</string>
-    <!-- Content description for action: Press to sign in with your Expedia account -->
-    <string name="cd_checkout_sign_in_with_expedia">กดเพื่อเข้าสู่ระบบบัญชีเอ็กซ์พีเดีย</string>
     <!-- Content description for action: Press to add a traveler to this booking -->
     <string name="cd_checkout_add_traveler">กดเพื่อเพิ่มผู้เดินทางลงในการจองนี้</string>
     <!-- Content description for action: Press to select payment for this booking -->
@@ -3498,8 +3478,8 @@
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">กดเพื่อใส่รหัสคูปองหรือรหัสส่วนลด</string>
     <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign into Expedia with your Facebook account -->
-    <string name="cd_sign_in_with_facebook">กดเพื่อเข้าสู่ระบบเอ็กซ์พีเดียด้วยบัญชี Facebook ของคุณ</string>
+    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
+    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">โปรดเข้าสู่ระบบ {brand} ด้วยบัญชี Facebook ของคุณ</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">กดเพื่อเพิ่มผู้เดินทางคนใหม่</string>
