--- a/project/src/main/res/values-zh/strings.xml
+++ b/project/src/main/res/values-zh/strings.xml
@@ -67,8 +67,6 @@
     <string name="car_auto_tran_text">自动挡</string>
     <!-- Car manual transmission text-->
     <string name="car_man_tran_text">手动挡</string>
-    <!-- Sign in Text-->
-    <string name="cars_sign_in_text">登录 Expedia</string>
 
     <!-- car result -->
     <!-- car door range -->
@@ -159,6 +157,8 @@
     <string name="car_rental_breakdown_drop_off_charges">还车收费</string>
     <!-- Unlimited mileage -->
     <string name="unlimited_mileage">不限里程</string>
+    <!-- Insurance included -->
+    <string name="insurance_included">已含保险</string>
     <!-- Checkout confirmation message (temporary) -->
     <string name="successful_checkout_TEMPLATE">行程编号 %1$s</string>
     <!-- Error message for some missing checkout params -->
@@ -877,8 +877,8 @@
     <string name="sign_in_failed_try_again">登录失败。如果您的电子邮件和密码是正确的，请确认应用的国家/地区设置是否正确。</string>
     <!-- User needs to reset password -->
     <string name="sign_in_reset_password">我们需要您为所有 Expedia 网站创建新的国际通用登录信息。&lt;br&gt;请使用下面的“忘记密码？”链接，重置密码。</string>
-    <!-- Facebook connect expedia password hint -->
-    <string name="expedia_password_hint">Expedia 密码</string>
+    <!-- Facebook connect password hint -->
+    <string name="brand_password_hint_TEMPLATE">{brand} 密码</string>
     <!-- Link accounts -->
     <string name="link_accounts">关联帐户</string>
     <!-- Failure to update the user -->
@@ -895,6 +895,8 @@
     <string name="Sign_In">登录</string>
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_Expedia">登录 Expedia</string>
+    <!-- Sign in with the current brand -->
+    <string name="sign_in_with_brand_TEMPLATE">登录 {brand}</string>
     <!-- or -->
     <string name="or">或</string>
     <!-- Already signed in -->
@@ -1825,16 +1827,14 @@
     <string name="the_hotel_lowered_the_total_price_TEMPLATE">好消息！您的酒店价格刚刚从 %1$s 降到了 %2$s。</string>
     <!-- Button showing for when the user can click it to close the cost breakdown dialog -->
     <string name="done">完成</string>
-    <!-- Label to show user in cost breakdown for the total being charged to them right now -->
-    <string name="total_due_today">今天要付给 Expedia 的金额</string>
     <!-- Label to show user when they use unsupported characters in their name or address -->
     <string name="please_use_the_roman_alphabet">请使用拉丁字母</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">请输入有效的电子邮件地址。</string>
     <!-- Row header for when we show resort fees as its own line item -->
     <string name="fees_paid_at_hotel">需在酒店支付的费用：</string>
-    <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
-    <string name="total_due_to_expedia_today">今天要付给 Expedia 的金额：</string>
+    <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
+    <string name="due_to_brand_today_TEMPLATE">今天要付给 {brand} 的金额：</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">度假费用 &lt;b&gt;%1$s&lt;/b&gt; 将在酒店收取。您的住宿费用总计 &lt;b&gt;%2$s&lt;/b&gt;。</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -2359,6 +2359,10 @@
     <string name="DONE">完成</string>
     <!-- Button label for searching the visible map area -->
     <string name="map_search_button">搜索地图</string>
+    <!-- Button label for toggling to the map -->
+    <string name="map_text">地图</string>
+    <!-- Button label for toggling to the hotel list -->
+    <string name="list_text">列表</string>
     <!-- Label for sort hotels in hotel list -->
     <string name="sort">排序</string>
     <!-- Label to swtich between map and list search results -->
@@ -2735,20 +2739,6 @@
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
     <string name="unknown">未知</string>
 
-    <!-- Expedia policy strings -->
-    <!-- Policy displayed to user when an immediate charge is required -->
-    <string name="PolicyImmediateChargeRequired">进行预订时，将从您的信用卡中立即扣除全额预订费用。</string>
-    <!-- Policy displayed to user when the room is non-refundable -->
-    <string name="PolicyNonRefundable">我们正提供此酒店的特低客房价格。为了这么做，我们必须将此预订规定为不可退款。如果您选择取消此预订，您将不会获得所付费用的任何退款。</string>
-    <!-- Policy displayed to user when a deposit is required -->
-    <string name="PolicyDepositRequired">将从您的信用卡中扣除预订押金。当您确定预订时，酒店将直接从您的信用卡中扣除金额。</string>
-    <!-- Policy displayed to user when a guarantee is required -->
-    <string name="PolicyGuaranteeRequired">我们需要您的信用卡信息以保证您的预订。将不会从您的信用卡中扣除费用，直到您抵达酒店后或取消截止日期已过。</string>
-    <!-- Expedia merchant hotel policies -->
-    <string name="PolicyExpediaMerchant">继续完成此预订，即表示您同意所有条款和条件，包括取消政策以及用户协议所含的全部条款和条件。\n\n您同意支付预订的费用。如果您不支付这笔欠款，而需通过收帐公司、律师或任何其他法律途径追收这笔款项，您同意支付所有合理的费用，包括由此收帐程序所产生的律师费和诉讼费。</string>
-    <!-- Expedia agent hotel policies -->
-    <string name="PolicyExpediaAgent">您正预订一家无折扣的酒店。所有显示的价格按每晚计算，并根据每间房两人入住的费用，除非另有说明。请仔细检查客房描述和价格条规，以确保您选择的客房可容纳您的所有同行者。一些价格可能需要特别的身份证明才能享有。我们的预订费用、税款和其他由酒店收取的附加费不包含在内。如需在房间所列的入住人数之外增加成人或儿童，则可能需要支付额外费用，具体由酒店自行决定。\n\n我们会将 2 人以上或者超出选定房价所示入住人数的请求发给酒店，但无法提供保证。如果酒店方面接受要求，酒店有权决定是否收取额外费用。</string>
-
     <!-- Expedia Accounts -->
     <!-- Label for menu item to sign into account -->
     <string name="sign_in">登录</string>
@@ -2761,7 +2751,7 @@
     <!-- Message that tells user they failed to sign in -->
     <string name="sign_in_failed">请再次登录</string>
     <!-- Label for sign out confirmation -->
-    <string name="sign_out_confirmation">确实要退出 Expedia 帐户？</string>
+    <string name="sign_out_confirmation_TEMPLATE">确定要退出您的 {brand} 帐户？</string>
     <!-- Label for Expedia +blue rewards program name -->
     <string name="Expedia_plus_blue">Expedia+ 蓝标</string>
     <!-- Label for Expedia +silver rewards program name -->
@@ -2770,8 +2760,8 @@
     <string name="Expedia_plus_gold">Expedia +金牌</string>
     <!-- Label for signin screen -->
     <string name="expedia_account">Expedia 帐户</string>
-    <!-- Label for loading user profile from expedia.com -->
-    <string name="loading_expedia_account">正在加载 Expedia 帐户</string>
+    <!-- Label for loading user profile from Expedia -->
+    <string name="loading_brand_account_TEMPLATE">正在加载 {brand} 帐户</string>
     <!-- Label for password recovery -->
     <string name="forgot_your_password">忘记密码？</string>
     <!-- Webview title for password recovery -->
@@ -2823,7 +2813,7 @@
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">很抱歉，该优惠券不能在这家酒店使用。</string>
     <!-- Error when applying coupon - our coupon servers are down -->
-    <string name="coupon_error_service_down">很抱歉，我们当前无法处理优惠券。请再试一次。</string>
+    <string name="coupon_error_service_down">很抱歉，我们目前无法处理优惠券。请再试一次。</string>
     <!-- Error when applying coupon - session timeout -->
     <string name="coupon_error_service_timeout">很抱歉，计算代码折扣的时间超时了。请再试一次。</string>
     <!-- Error when applying coupon - Invalid Stay Dates -->
@@ -2832,6 +2822,8 @@
     <string name="coupon_error_exceeded_earn_limit">很抱歉，该优惠券使用的次数太多了，不能再用了。</string>
     <!-- Error when applying coupon - Invalid Average Price -->
     <string name="coupon_error_invalid_average_price">很抱歉，每晚均价未达到该优惠券的最低要求。</string>
+    <!-- Error when applying coupon - Pay Later Hotel -->
+    <string name="coupon_error_pay_later_hotel">“到店付款”客房不能使用优惠券，请选择“立即付款”客房。</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2844,18 +2836,12 @@
     <string name="contact_expedia_via">联系 Expedia…</string>
     <!-- Contact Expedia via phone -->
     <string name="contact_expedia_phone">电话</string>
-    <!-- Contact Expedia via email subject -->
-    <string name="contact_expedia_email_subject">Expedia 预订支持</string>
     <!-- Contact Expedia via website -->
     <string name="contact_expedia_website">网站</string>
     <!-- Label for "Expedia website" button in info page -->
     <string name="expedia_website">Expedia 网站</string>
     <!-- Label for "app support" button in info page -->
     <string name="app_support">应用程序支持</string>
-    <!-- Subject line for "tell a friend" feature -->
-    <string name="tell_a_friend_subject">Expedia 酒店</string>
-    <!-- Message body for "tell a friend" feature -->
-    <string name="tell_a_friend_body">您好！\n\n请试试适用于 iPhone 和 Android 手机（移动设备）的 Expedia Hotels 应用程序。这是免费的！您可通过它轻松搜索并预订全世界超过 140,000 家酒店的客房。它是通过手机（移动设备）预订酒店客房最便捷的工具。\n\nhttp://www.expedia.com/app</string>
     <!-- Label for link to terms and conditions -->
     <string name="info_label_terms_conditions">条款和条件</string>
     <!-- Label for link to privacy policy -->
@@ -2870,8 +2856,6 @@
     <string name="dialog_title_cleared_private_data">隐私数据已清除</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">所有保存的帐单和联系信息已被删除。</string>
-    <!-- Dialog Message asking the user to confirm that they want to open the expedia mobile site in an external browser -->
-    <string name="dialog_message_launch_expedia_mobile_site">启动 Expedia 移动网站？</string>
     <!-- Action button label to Subscribe to our mailing list -->
     <string name="Subscribe">订阅</string>
     <!-- Action button label to follow on twitter -->
@@ -3270,8 +3254,6 @@
     <string name="country_ax">奥兰群岛</string>
 
     <!-- Google Wallet -->
-    <!-- The merchant name to display to the user for Google Wallet -->
-    <string name="merchant_name">Expedia, Inc.</string>
     <!-- Loading message -->
     <string name="loading">加载中</string>
     <!-- Google Wallet label -->
@@ -3321,9 +3303,9 @@
 
     <!-- Handling sold out hotels -->
     <!-- Shown when a hotel is sold out for tonight (and they are just booking for tonight) -->
-    <string name="not_currently_available">Expedia 网站暂时没有空房</string>
+    <string name="not_currently_available_from_brand_TEMPLATE">{brand} 暂时没有空房</string>
     <!-- Shown when a hotel is sold out for a generic set of dates.  %s is the set of dates, e.g. "Not available from Expedia Nov. 3-4" -->
-    <string name="not_currently_available_TEMPLATE">Expedia 网站上 %s 已经没有空房</string>
+    <string name="not_currently_available_from_brand_dates_TEMPLATE">{brand} 在 {dates} 无空房</string>
 
     <!-- Push Notification Loc Strings - So these are named according to their loc keys that are provided from the push api -->
     <!-- Your flight to _ delayed _ hour TEMPLATE -->
@@ -3487,8 +3469,6 @@
     <!-- Checkout screen -->
     <!-- Content description for action: Press to begin checkout -->
     <string name="cd_checkout">按这里，开始付款</string>
-    <!-- Content description for action: Press to sign in with your Expedia account -->
-    <string name="cd_checkout_sign_in_with_expedia">按这里，登录您的 Expedia 帐户</string>
     <!-- Content description for action: Press to add a traveler to this booking -->
     <string name="cd_checkout_add_traveler">按这里可为此次预订添加旅客</string>
     <!-- Content description for action: Press to select payment for this booking -->
@@ -3496,8 +3476,8 @@
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">按这里可输入折扣券或促销代码</string>
     <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign into Expedia with your Facebook account -->
-    <string name="cd_sign_in_with_facebook">按这里可使用 Facebook 帐户登录 Expedia</string>
+    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
+    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">按这里可使用 Facebook 帐户登录 {brand}</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">按这里可输入新旅客的信息</string>
